--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: 100vh;
     height: 500px;
+    max-width: 100vw;
     width: 100%;
     background-color: black;
     color: white;
@@ -15,13 +17,16 @@
 }
 
 .form-container {
+    max-height: 100vh;
+    max-width: 100vw;
     height: 500px;
     width: 500px;
 }
 
 .form-container button {
-    max-height: 50px;
-    max-width: 100px;
+    max-height: 100vh;
+    max-width: 100vw;
+    width: 25%;
     margin: 20px 0px;
     display: flex;
     justify-content: center;
@@ -40,18 +45,19 @@
 }
 
 .icons img {
-    max-width: 30px;
+    max-width: 100%;
+    width: 30px;
 }
 
 .icons {
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    gap: 1vw;
 }
 
 .icons-container {
     width: 100%;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,8 +66,9 @@
 }
 
 .back-container {
+    max-height: 100vh;
     height: 200px;
-    width: 100%;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
