--- a/src/components/Headers.css
+++ b/src/components/Headers.css
@@ -2,12 +2,12 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
-    width: 100%;
+    max-height: 50vh;
+    width: 100vw;
     color: white;
-    font-size: 25px;
+    font-size: 25pt;
     /* border: 2px solid white; */
-    padding: 100px 0px 50px 0px;
+    /* padding: 100px 0px 50px 0px; */
     animation: appear linear;
     animation-timeline: view();
     animation-range: entry 10% cover 40%;
@@ -25,7 +25,8 @@
 }
 
 .headers-box {
-    height: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
     width: 500px;
     display: flex;
     justify-content: center;
