--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,7 +1,10 @@
 .projects-container {
-height: 1000px;
+max-height: 100vh;
+height: 100%;
+max-width: 100vw;
 width: 100%;
 display: flex;
+/* flex-wrap: wrap; */
 flex-direction: row;
 justify-content: space-evenly;
 animation: appear linear;
@@ -9,6 +12,7 @@ animation-timeline: view();
 animation-range: entry 0% cover 30%;
 /* border: 2px solid black; */
 margin-top: 100px;
+margin-bottom: 200px;
 
 }
 
@@ -24,7 +28,7 @@ margin-top: 100px;
 }
 
 .image-container img {
-max-width: 1200px;
+max-width: 1200vw;
 border: 2px solid #444952;
 border-radius: 50px;
 }
