--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -1,5 +1,7 @@
 .hero-container {
-    height: 1300px;
+    max-height: 100vh;
+    height: 1280px;
+    max-width: 100vw;
     width: 100%;
     /* background-image: url(background2.jpg); */
     background-size: 100vw 100vh;
@@ -11,6 +13,6 @@
 }
 
 #hero-header {
-    max-width: 30%;
+    max-width: 30vw;
     font-size: 80pt;
 }
