Made changes for responsiveness in project containers img & videos. Next will be about section.

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,12 +1,13 @@
 .about-container {
-height: 1600px;
+height: 100%;
 width: 100%;
 display: flex;
+flex-wrap: wrap;
 flex-direction: column;
-gap: 100px;
+gap: 12rem;
 justify-content: space-evenly;
 align-items: center;
-/* border: 2px solid white; */
+border: 2px solid white;
 animation: appear linear;
 animation-timeline: view();
 animation-range: entry 80% cover 30%;
@@ -24,12 +25,17 @@ animation-range: entry 80% cover 30%;
 }
 
 .about-section {
+min-width:300px;
+max-width: 1000px;
+width: 50%;
+max-height: fit-content;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-width: 1000px;
-max-height: fit-content;
+/* max-width: 50vw; */
+/* width: 35%; */
+/* max-height: 100vh; */
 padding: 25px 25px;
 border: 2px solid #66b2b2;
 border-radius: 50px;
