--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -4,16 +4,50 @@ height: 100%;
 max-width: 100vw;
 width: 100%;
 display: flex;
-/* flex-wrap: wrap; */
+flex-wrap: wrap;
 flex-direction: row;
 justify-content: space-evenly;
+gap: 2rem;
 animation: appear linear;
 animation-timeline: view();
 animation-range: entry 0% cover 30%;
 /* border: 2px solid black; */
 margin-top: 100px;
 margin-bottom: 200px;
+}
 
+@media (max-width: 600px) {
+  .projects-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-container,
+  .project-info { 
+    flex: 1 1 100%;
+    width: 100%;
+    max-width: 90vw;
+    padding: 1rem;
+  }
+s
+  .slide-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .image-container img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.image-container,
+.project-info {
+  flex: 1 1 400px;      /* grow and shrink as needed, with a base width of 400px */
+  min-width: 300px;     /* don't shrink smaller than this */
+  max-width: 600px;     /* don't grow larger than this */
+  padding: 2rem;
+  box-sizing: border-box;
 }
 
 @keyframes appear {
@@ -28,12 +62,17 @@ margin-bottom: 200px;
 }
 
 .image-container img {
-max-width: 1200vw;
-border: 2px solid #444952;
-border-radius: 50px;
+max-width: 100%;
+max-height: 100%;
+/* border: 2px solid #444952; */
+border-radius: 20px;
 }
 
 .image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
     max-height: 720px;
     background-color: black;
     border: 5px solid #66b2b2;
@@ -42,7 +81,9 @@ border-radius: 50px;
 }
 
 .project-info {
+min-width:300px;
 max-width: 500px;
+width: 50%;
 max-height: fit-content;
 background-color: black;
 border: 2px solid #66b2b2;
@@ -50,6 +91,15 @@ border-radius: 50px;
 padding: 50px 50px;
 background-color: rgba(0, 0, 0, 0.5);
 box-shadow: -10px -10px #66b2b2;
+}
+
+.youtube-container {
+/* min-width:300px; */
+/* max-width: 100vw; */
+width: 100%;
+height: 100%;
+/* max-height: 800px; */
+/* border: 2px solid white; */
 }
 
 .project-info p {
@@ -77,3 +127,23 @@ box-shadow: -10px -10px #66b2b2;
     outline: none;
     background-image: ;
 } */
+
+.slide-container {
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  /* border: 2px solid white; */
+}
+
+.slide-image {
+  width: 100vw;
+  height: 100vh;
+  border-radius: 10px;
+  display: block;
+  /* border: 2px solid rgb(255, 20, 20); */
+}
+
