--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,10 +7,11 @@ flex-direction: column;
 gap: 12rem;
 justify-content: space-evenly;
 align-items: center;
-border: 2px solid white;
+/* border: 2px solid white; */
 animation: appear linear;
 animation-timeline: view();
-animation-range: entry 80% cover 30%;
+animation-range: entry 80% cover 20%;
+margin-top: 100px
 }
 
 @keyframes appear {
@@ -73,24 +74,27 @@ align-items: center;
 /* border-radius: 50px; */
 background-color: rgba(0, 0, 0, 0.5);
 color: white;
-/* border: 2px solid white; */
-box-shadow: 0px 5px #66b2b2;
+border: 5px solid #66b2b2;
+/* box-shadow: 5px 5px #66b2b2; */
 /* margin-bottom: 500px; */
 }
 
 
-#stack-header {
-    font-size: 40px;
+.stack-header {
+    height: 50px;
+    width: 100vw;
+    font-size: 20px;
     text-decoration: underline #66b2b2;
-    border: 2px solid white;
-    /* text-decoration: underline #66b2b2 ; */
+    /* border: 2px solid white; */
+    text-align: center;
 }
 
 
 .stack-icons {
-    height: 500px;
-    width: 2000px;
-    max-width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    width: 100%;
+    max-width: 100vw;
     display: grid;
      overflow: hidden;
     grid-template-columns: repeat(6, 100px);
