--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -50,3 +50,32 @@ button {
     border-radius: 100px;
 }
 
+@media (max-width: 600px) {
+  .nav-bar {
+    height: 70px;
+    padding: 0 20px;
+    box-shadow: 0px 3px #66b2b2;
+  }
+
+  .logo {
+    height: 100px;
+    width: 100px;
+  }
+
+  .logo img {
+    height: 50px;
+  }
+
+  .buttons {
+    gap: 20px;
+    font-size: 14px;
+  }
+
+  .buttons li,
+  button {
+    padding: 6px 15px;
+    font-size: 14px;
+  }
+}
+
+
