--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,5 +1,5 @@
 .projects-container {
-max-height: 100vh;
+/* max-height: 100vh; */
 height: 100%;
 max-width: 100vw;
 width: 100%;
@@ -82,7 +82,7 @@ border-radius: 20px;
 
 .project-info {
 min-width:300px;
-max-width: 500px;
+max-width: 600px;
 width: 50%;
 max-height: fit-content;
 background-color: black;
