--- a/src/components/About.css
+++ b/src/components/About.css
@@ -11,7 +11,7 @@ align-items: center;
 animation: appear linear;
 animation-timeline: view();
 animation-range: entry 80% cover 20%;
-margin-top: 100px
+/* margin-top: 5%; */
 }
 
 @keyframes appear {
@@ -26,10 +26,12 @@ margin-top: 100px
 }
 
 .about-section {
-min-width:300px;
-max-width: 1000px;
+min-width:50%;
+max-width: 80%;
 width: 50%;
-max-height: fit-content;
+min-height: 50%;
+max-height: 80%;
+height: 50%;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -48,18 +50,21 @@ box-shadow: 10px 10px #66b2b2;
 
 .about-section h1 {
     /* border-bottom: 2px solid #66b2b2; */
-    font-size: 30pt;
+     font-size: clamp(1rem, 2.5vw, 2rem);
+    /* max-width: 50%;
+    max-height: 25%; */
 }
 
 .about-section img {
-    max-width: 200px;
+    max-width: 20vw;
+    max-height: 20vh;
     border-radius: 100px;
     border: 2px solid #66b2b2;
     opacity: 100%;
 }
 
 .about-section p {
-    font-size: 20pt;
+     font-size: clamp(1rem, 2.5vw, 2rem);
 }
 
 .stack-container {
@@ -82,7 +87,7 @@ border: 5px solid #66b2b2;
 
 .stack-header {
     height: 50px;
-    width: 100vw;
+    width: 100%;
     font-size: 20px;
     text-decoration: underline #66b2b2;
     /* border: 2px solid white; */
@@ -94,7 +99,7 @@ border: 5px solid #66b2b2;
     height: 100%;
     max-height: 100vh;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     display: grid;
      overflow: hidden;
     grid-template-columns: repeat(6, 100px);
