--- a/src/components/Headers.css
+++ b/src/components/Headers.css
@@ -3,9 +3,10 @@
     justify-content: center;
     align-items: center;
     max-height: 50vh;
-    width: 100vw;
+    width: 100%;
     color: white;
-    font-size: 25pt;
+    font-size: clamp(1rem, 2.5vw, 2rem);
+    text-decoration: underline;
     /* border: 2px solid white; */
     /* padding: 100px 0px 50px 0px; */
     animation: appear linear;
@@ -26,11 +27,11 @@
 
 .headers-box {
     max-height: 100vh;
-    max-width: 100vw;
+    max-width: 100%;
     width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid white;
-    padding: 50px;
+    /* border-bottom: 2px solid white; */
+    margin: 5%;
 }
