--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,11 +1,12 @@
 .nav-bar {
     border-bottom: 2px solid #66b2b2;
-    height: 120px;
+    height: 10vh;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* margin: 10px 120px; */
-    padding: 0 50px 0 0;
+    /* padding: 0 50px 0 0; */
     color: white;
     position: sticky;
     top: 0;
@@ -33,8 +34,9 @@
     display: flex;
     align-items: center;
     list-style: none;
-    font-size: 18px;
+    font-size: clamp(1rem, 2.5vw, 1.25rem);
     gap: 50px;
+    padding: 50px;
 }
 
 .buttons li {
@@ -48,6 +50,7 @@ button {
     color: white;
     padding: 10px 25px;
     border-radius: 100px;
+    max-width: 100%;
 }
 
 @media (max-width: 600px) {
@@ -63,18 +66,18 @@ button {
   }
 
   .logo img {
-    height: 50px;
+    height: 5vh;
   }
 
   .buttons {
-    gap: 20px;
-    font-size: 14px;
+    gap: 2vw;
+    font-size: clamp(1rem, 2.5vw, 2rem);
   }
 
   .buttons li,
   button {
-    padding: 6px 15px;
-    font-size: 14px;
+    /* padding: 6px 15px; */
+    font-size: clamp(1rem, 2.5vw, 1.25rem);
   }
 }
 
