--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,7 +1,7 @@
 .projects-container {
 /* max-height: 100vh; */
 height: 100%;
-max-width: 100vw;
+max-width: 100%;
 width: 100%;
 display: flex;
 flex-wrap: wrap;
@@ -81,9 +81,9 @@ border-radius: 20px;
 }
 
 .project-info {
-min-width:300px;
+min-width:400px;
 max-width: 600px;
-width: 50%;
+width: 60%;
 max-height: fit-content;
 background-color: black;
 border: 2px solid #66b2b2;
@@ -103,18 +103,23 @@ height: 100%;
 }
 
 .project-info p {
-    font-size: 20pt;
+     font-size: clamp(1rem, 2.5vw, 2rem);
 }
 
 .project-info h1 {
     text-decoration: underline;
+     font-size: clamp(1rem, 2.5vw, 2rem);
 }
 
 .scroller-controls {
+    /* min-height: 50px; */
     height: 50px;
-    border: 0;
-    outline: none;
-    /* background-color: blue; */
+    /* max-height: 50px; */
+    /* max-height: 100%; */
+    border: 2px solid #66b2b2;
+    border-radius: 100%;
+    outline: #66b2b2;
+    background-color: #66b2b2;
 }
 
 .scroller-controls img {
@@ -131,7 +136,7 @@ height: 100%;
 .slide-container {
   width: 100%;
   height: 100%;
-  max-height: 100vh;
+  max-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,8 +145,8 @@ height: 100%;
 }
 
 .slide-image {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   display: block;
   /* border: 2px solid rgb(255, 20, 20); */
