--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -1,10 +1,10 @@
 .hero-container {
     max-height: 100vh;
     height: 1280px;
-    max-width: 100vw;
+    max-width: 100%;
     width: 100%;
     /* background-image: url(background2.jpg); */
-    background-size: 100vw 100vh;
+    background-size: 100% 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,7 +12,11 @@
     /* border: 2px solid black; */
 }
 
+.hero-container button {
+     font-size: clamp(1rem, 2.5vw, 2rem);
+}
+
 #hero-header {
-    max-width: 400px;
-    font-size: 3.5rem;
+    max-width: 50%;
+     font-size: clamp(1rem, 2.5vw, 2rem);
 }
