--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -18,5 +18,11 @@
 
 #hero-header {
     max-width: 50%;
-     font-size: clamp(1rem, 2.5vw, 2rem);
+     font-size: clamp(1.5rem, 2.5vw, 4rem);
+}
+
+@media (max-width: 600px) {
+    #hero-header {
+        max-width: 100%;
+    }
 }
