--- a/src/components/About.css
+++ b/src/components/About.css
@@ -50,7 +50,7 @@ box-shadow: 10px 10px #66b2b2;
 
 .about-section h1 {
     /* border-bottom: 2px solid #66b2b2; */
-     font-size: clamp(1rem, 2.5vw, 2rem);
+     font-size: clamp(1.5rem, 2.5vw, 3rem);
     /* max-width: 50%;
     max-height: 25%; */
 }
@@ -102,7 +102,7 @@ border: 5px solid #66b2b2;
     max-width: 100%;
     display: grid;
      overflow: hidden;
-    grid-template-columns: repeat(6, 100px);
+    grid-template-columns: repeat(6, 5vw);
     gap: 0px 100px;
     justify-content: center;
     align-items: center;
@@ -112,8 +112,9 @@ border: 5px solid #66b2b2;
     background-color: rgba(0, 0, 0, 0);
 }
 
+
 .stack-container img {
-    max-width: 100px;
+    max-width: 10px;
     border: 2px solid #66b2b2;
     border-radius: 20px;
     padding: 20px 20px;
@@ -132,5 +133,52 @@ border: 5px solid #66b2b2;
 
 .prop-container img {
     max-width: 80px;
+}
+
+
+
+@media (max-width: 600px) {
+    .stack-icons {
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+    display: grid;
+    overflow: hidden;
+    grid-template-columns: repeat(3, 3vw);
+    gap: 0px 100px;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+    /* border: 2px solid white; */
+    /* object-fit: contain; */
+    background-color: rgba(0, 0, 0, 0);
+    padding-top: 30px;
+}
+  .stack-container {
+    height: 75vh;
+    width: 75vw;
+    flex-direction: column;
+    align-items: center;
+    font-size: clamp(1rem, 2.5rem, 2rem);
+  }
+
+  .stack-container img {
+    height: 6.5vh;
+    width: 10vw;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px;
+  }
+
+  .about-section {
+    width: 100%;
+  }
+
+  .prop-container {
+    font-size: 10px;
+  }
+
+  
 }
 
