--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -14,7 +14,7 @@
 }
 
 .contact-background {
-    width: 100vw;
+    width: 100%;
     background-color: black;
     display: flex;
     flex-direction: column;
