--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -58,6 +58,9 @@ button {
     height: 70px;
     padding: 0 20px;
     box-shadow: 0px 3px #66b2b2;
+    justify-content: left;
+    gap: 10vw;
+    max-width: 92%;
   }
 
   .logo {
@@ -72,13 +75,16 @@ button {
   .buttons {
     gap: 2vw;
     font-size: clamp(1rem, 2.5vw, 2rem);
+    padding: 0;
   }
 
-  .buttons li,
-  button {
-    /* padding: 6px 15px; */
-    font-size: clamp(1rem, 2.5vw, 1.25rem);
-  }
-}
-
-
+  .nav-bar button {
+    background: #66b2b2;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 100px;
+    height: 100%;
+    width: 100%;
+    font-size: clamp(1.25rem, 2.5vw, 1.25rem);
+    /* max-width: 100%; */
+}}
