--- a/src/components/About.css
+++ b/src/components/About.css
@@ -28,7 +28,7 @@ animation-range: entry 80% cover 20%;
 .about-section {
 min-width:50%;
 max-width: 80%;
-width: 50%;
+width: 100%;
 min-height: 50%;
 max-height: 80%;
 height: 50%;
@@ -137,16 +137,16 @@ border: 5px solid #66b2b2;
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 390px) {
     .stack-icons {
     height: 100%;
-    max-height: 100%;
-    width: 100%;
-    max-width: 100%;
+    max-height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
     display: grid;
     overflow: hidden;
-    grid-template-columns: repeat(3, 3vw);
-    gap: 0px 100px;
+    grid-template-columns: repeat(3, 4vw);
+    gap: 0px 85px;
     justify-content: center;
     align-items: center;
     /* text-align: center; */
@@ -157,22 +157,24 @@ border: 5px solid #66b2b2;
 }
   .stack-container {
     height: 75vh;
-    width: 75vw;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
     font-size: clamp(1rem, 2.5rem, 2rem);
   }
 
   .stack-container img {
-    height: 6.5vh;
-    width: 10vw;
+    height: auto;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
     padding: 10px 10px;
   }
 
   .about-section {
-    width: 100%;
+    max-width: 100vw;
+    width: 100vw;
+    /* margin: 0; */
   }
 
   .prop-container {
