--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -53,29 +53,41 @@ button {
     max-width: 100%;
 }
 
-@media (max-width: 600px) {
+/* .buttons-container {
+  width: 100%;
+  height: 100%;
+} */
+
+@media (max-width: 390px) {
   .nav-bar {
     height: 70px;
-    padding: 0 20px;
     box-shadow: 0px 3px #66b2b2;
-    justify-content: left;
-    gap: 10vw;
-    max-width: 92%;
+    justify-content: center;
+    align-items: center;
+    gap: 5vw;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
   }
 
   .logo {
-    height: 100px;
-    width: 100px;
+    height: 10%;
+    width: 10%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .logo img {
-    height: 5vh;
+    height: 3vh;
   }
 
   .buttons {
     gap: 2vw;
     font-size: clamp(1rem, 2.5vw, 2rem);
     padding: 0;
+    margin: 0;
   }
 
   .nav-bar button {
@@ -85,6 +97,10 @@ button {
     border-radius: 100px;
     height: 100%;
     width: 100%;
-    font-size: clamp(1.25rem, 2.5vw, 1.25rem);
+    font-size: clamp(1rem, 2.5vw, 2rem);
     /* max-width: 100%; */
-}}
+}
+.buttons-container {
+  display: flex;
+}
+}
