--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -20,31 +20,6 @@ margin-bottom: 200px;
      font-size: clamp(1rem, 2.5vw, 2rem);
 }
 
-@media (max-width: 600px) {
-  .projects-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .image-container,
-  .project-info { 
-    flex: 1 1 100%;
-    width: 100%;
-    max-width: 100%;
-    padding: 1rem;
-  }
-s
-  .slide-image {
-    width: 100%;
-    height: auto;
-  }
-
-  .image-container img {
-    width: 100%;
-    height: auto;
-  }
-}
-
 .image-container,
 .project-info {
   flex: 1 1 400px;      /* grow and shrink as needed, with a base width of 400px */
@@ -139,6 +114,7 @@ height: 100%;
 
 .slide-container {
   width: 100%;
+  max-width: 100%;
   height: 100%;
   max-height: 100%;
   display: flex;
@@ -154,5 +130,30 @@ height: 100%;
   border-radius: 10px;
   display: block;
   /* border: 2px solid rgb(255, 20, 20); */
+}
+
+@media (max-width: 390px) {
+  .projects-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-container, .project-info { 
+    flex: 1 1 100%;
+    width: 100%;
+    max-width: 100vw;
+    padding: 2rem;
+  }
+  
+  .slide-image {
+    width: auto;
+    height: 100%;
+  }
+
+  .image-container img {
+    width: auto;
+    height: 100%;
+    /* border-radius: 50%; */
+  }
 }
 
