--- a/src/components/About.css
+++ b/src/components/About.css
@@ -114,7 +114,7 @@ border: 5px solid #66b2b2;
 
 
 .stack-container img {
-    max-width: 10px;
+    /* max-width: 10px; */
     border: 2px solid #66b2b2;
     border-radius: 20px;
     padding: 20px 20px;
@@ -129,10 +129,11 @@ border: 5px solid #66b2b2;
     align-items: center;
     font-size: 12px;
     background-color: rgba(0, 0, 0, 0);
+    padding-top: 30px;
 }
 
 .prop-container img {
-    max-width: 80px;
+    max-width: 120px;
 }
 
 
