--- a/src/components/About.css
+++ b/src/components/About.css
@@ -50,7 +50,7 @@ box-shadow: 10px 10px #66b2b2;
 
 .about-section h1 {
     /* border-bottom: 2px solid #66b2b2; */
-     font-size: clamp(1.5rem, 2.5vw, 3rem);
+     font-size: clamp(1rem, 2.5vw, 3rem);
     /* max-width: 50%;
     max-height: 25%; */
 }
@@ -64,7 +64,7 @@ box-shadow: 10px 10px #66b2b2;
 }
 
 .about-section p {
-     font-size: clamp(1rem, 2.5vw, 2rem);
+     font-size: clamp(1rem, 2vw, 3rem);
 }
 
 .stack-container {
@@ -138,7 +138,7 @@ border: 5px solid #66b2b2;
 
 
 
-@media (max-width: 390px) {
+@media (max-width: 376px) {
     .stack-icons {
     height: 100%;
     max-height: 100vh;
@@ -147,7 +147,7 @@ border: 5px solid #66b2b2;
     display: grid;
     overflow: hidden;
     grid-template-columns: repeat(3, 4vw);
-    gap: 0px 85px;
+    gap: 0px 100px;
     justify-content: center;
     align-items: center;
     /* text-align: center; */
@@ -161,7 +161,7 @@ border: 5px solid #66b2b2;
     width: 100vw;
     flex-direction: column;
     align-items: center;
-    font-size: clamp(1rem, 2.5rem, 2rem);
+    /* font-size: clamp(1rem, 2.5rem, 2rem); */
   }
 
   .stack-container img {
@@ -173,13 +173,17 @@ border: 5px solid #66b2b2;
   }
 
   .about-section {
-    max-width: 100vw;
-    width: 100vw;
-    /* margin: 0; */
+    max-width: 100%;
   }
 
   .prop-container {
-    font-size: 10px;
+    font-size: 8px;
+    height: auto;
+  }
+
+  .prop-container img {
+    width: 25vw;
+    height: auto;
   }
 
   
