--- a/src/components/About.css
+++ b/src/components/About.css
@@ -50,7 +50,7 @@ box-shadow: 10px 10px #66b2b2;
 
 .about-section h1 {
     /* border-bottom: 2px solid #66b2b2; */
-     font-size: clamp(1rem, 2.5vw, 3rem);
+     font-size: clamp(2rem, 2.5vw, 3rem);
     /* max-width: 50%;
     max-height: 25%; */
 }
@@ -64,7 +64,7 @@ box-shadow: 10px 10px #66b2b2;
 }
 
 .about-section p {
-     font-size: clamp(1rem, 2vw, 3rem);
+     font-size: clamp(1.15rem, 2.5vw, 2rem);
 }
 
 .stack-container {
@@ -138,7 +138,7 @@ border: 5px solid #66b2b2;
 
 
 
-@media (max-width: 376px) {
+@media (max-width: 361px) {
     .stack-icons {
     height: 100%;
     max-height: 100vh;
@@ -174,7 +174,13 @@ border: 5px solid #66b2b2;
 
   .about-section {
     max-width: 100%;
+    box-shadow: none;
   }
+
+ .about-section img {
+    max-width: 50%;
+    max-height: 100%;
+}
 
   .prop-container {
     font-size: 8px;
