--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     max-height: 100vh;
-    height: 500px;
+    height: 50vh;
     max-width: 80%;
     width: 100%;
     background-color: black;
@@ -15,6 +15,7 @@
 
 .contact-background {
     width: 100%;
+    height: 50vh;
     background-color: black;
     display: flex;
     flex-direction: column;
