--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -58,14 +58,14 @@ button {
   height: 100%;
 } */
 
-@media (max-width: 390px) {
+@media (max-width: 361px) {
   .nav-bar {
     height: 70px;
     box-shadow: 0px 3px #66b2b2;
     justify-content: center;
     align-items: center;
     gap: 5vw;
-    width: 100vw;
+    width: 100%;
     padding: 0;
     margin: 0;
   }
