--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -82,12 +82,12 @@ height: 100%;
 }
 
 .project-info p {
-     font-size: clamp(1rem, 2.5vw, 2rem);
+     font-size: clamp(1.15rem, 2.5vw, 2rem);
 }
 
 .project-info h1 {
     text-decoration: underline;
-     font-size: clamp(1rem, 2.5vw, 2rem);
+     font-size: clamp(1.5rem, 2.5vw, 2rem);
 }
 
 .scroller-controls {
@@ -132,18 +132,27 @@ height: 100%;
   /* border: 2px solid rgb(255, 20, 20); */
 }
 
-@media (max-width: 390px) {
+@media (max-width: 361px) {
   .projects-container {
     flex-direction: column;
     align-items: center;
   }
 
-  .image-container, .project-info { 
+  .image-container { 
     flex: 1 1 100%;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     padding: 2rem;
   }
+
+  .project-info {
+  min-width: 100vw;
+  max-width: 100%;
+  width: 60%;
+  max-height: fit-content;
+  box-shadow: none;
+  padding: 25px 25px;
+}
   
   .slide-image {
     width: auto;
@@ -154,6 +163,10 @@ height: 100%;
     width: auto;
     height: 100%;
     /* border-radius: 50%; */
+  }
+
+  .project-info {
+    max-width: 100%;
   }
 }
 
