--- a/src/components/About.css
+++ b/src/components/About.css
@@ -88,7 +88,7 @@ border: 5px solid #66b2b2;
 .stack-header {
     height: 50px;
     width: 100%;
-    font-size: 20px;
+    font-size: clamp(1.15rem, 2.5vw, 2rem);
     text-decoration: underline #66b2b2;
     /* border: 2px solid white; */
     text-align: center;
@@ -138,7 +138,7 @@ border: 5px solid #66b2b2;
 
 
 
-@media (max-width: 361px) {
+@media (max-width: 391px) {
     .stack-icons {
     height: 100%;
     max-height: 100vh;
@@ -146,7 +146,7 @@ border: 5px solid #66b2b2;
     max-width: 100vw;
     display: grid;
     overflow: hidden;
-    grid-template-columns: repeat(3, 4vw);
+    grid-template-columns: repeat(3, 0.5vw);
     gap: 0px 100px;
     justify-content: center;
     align-items: center;
@@ -158,10 +158,11 @@ border: 5px solid #66b2b2;
 }
   .stack-container {
     height: 75vh;
-    width: 100vw;
+    width: 90%;
     flex-direction: column;
     align-items: center;
     /* font-size: clamp(1rem, 2.5rem, 2rem); */
+    border: 2px solid #66b2b2;
   }
 
   .stack-container img {
@@ -173,11 +174,13 @@ border: 5px solid #66b2b2;
   }
 
   .about-section {
-    max-width: 100%;
+    min-width: 50vw;
+    max-width: 85%;
     box-shadow: none;
   }
 
  .about-section img {
+    min-width: 50vw;
     max-width: 50%;
     max-height: 100%;
 }
@@ -188,9 +191,14 @@ border: 5px solid #66b2b2;
   }
 
   .prop-container img {
-    width: 25vw;
+    width: 20vw;
     height: auto;
   }
+
+  .stack-header {
+    height: 50px;
+    width: 100%;
+}
 
   
 }
